--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-firebase/firestore": "^18.5.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^1.9.6",
@@ -24,9 +26,12 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.13.1",
+    "react-native-pager-view": "^6.2.2",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
   },
