--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/datetimepicker": "^7.6.1",
-    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/app": "^18.6.0",
     "@react-native-firebase/auth": "^18.5.0",
     "@react-native-firebase/firestore": "^18.5.0",
+    "@react-native-firebase/storage": "^18.6.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -23,8 +24,9 @@
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
+    "link": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "^0.72.5",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-image-picker": "^7.0.2",
     "react-native-modal": "^13.0.1",
